--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body{
-            background-color: brown;
+            background-color: rgb(69, 226, 253);
         }
     </style>
 </head>
